--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
     "vitest": "^1.6.0",
-    "@vitest/coverage-v8": "^1.6.0"
+    "@vitest/coverage-v8": "^1.6.0",
+    "@testing-library/jest-dom": "^6.4.6"
   }
 }
