--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vite": "^7.0.4",
     "vitest": "^1.6.0",
     "@vitest/coverage-v8": "^1.6.0",
-    "@testing-library/jest-dom": "^6.4.6"
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0"
   }
 }
